update: トップページのレイアウトを作成

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,12 @@
+/*!
+ * main.scss
+ *
+ * CopyRight (c) 2021 Watasuke
+ * Email  : <watasuke102@gmail.com>
+ * Twitter: @Watasuke102
+ * This software is released under the MIT SUSHI-WARE License.
+ */
+
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300&display=swap');
 
 html {
