--- a/src/styles/MenuCard.scss
+++ b/src/styles/MenuCard.scss
@@ -12,7 +12,7 @@
  
  .MenuCard-container {
   $translate-time: 0.2s;
-  width: 128px;
+  width: 180px;
   padding: 15px 25px;
   border-radius: 10px;
   cursor: pointer;
@@ -21,32 +21,32 @@
     font-size: 30px;
     font-weight: bold;
     color: #aaaaff;
-    /* aみたいにする */
+    // aみたいにする
     margin: 1px 0;
     text-decoration: underline;
-    transition: $translate-time;
+    transition: color $translate-time;
   }
   span {
     color: #eee;
     font-size: 80px;
     user-select: none;
-    /* ちょっと右にずれてるので、下の文字と揃える */
+    // ちょっと右にずれてるので、下の文字と揃える
     margin-left: -6px;
-    transition: $translate-time;
+    transition: color $translate-time;
   }
   
   background-color: #0000;
-  transition: $translate-time;
+  transition: background-color $translate-time;
   &:hover {
     background-color: #dddf;
     p {
       color: #222277;
-      transition: $translate-time;
+      transition: color $translate-time;
     }
     span {
       color: #222;
-      transition: $translate-time;
+      transition: color $translate-time;
     }
-    transition: $translate-time;
+    transition: background-color $translate-time;
   }
 }
