--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,4 +13,13 @@ html {
   font-family: 'M PLUS 1p', sans-serif;
   background-color: #2f332f;
   color: #eee;
+
+  a {
+    color: #8888ff;
+    text-decoration: underline;
+    &:hover {
+      color: #aaaaff;
+      transition: color 0.5s;
+    }
+  }
 }
