update: canvasを使ったbackgroundの描画

--- a/src/styles/Background.scss
+++ b/src/styles/Background.scss
@@ -1,5 +1,5 @@
 /*!
- * Profile.scss
+ * Background.scss
  *
  * CopyRight (c) 2021 Watasuke
  * Email  : <watasuke102@gmail.com>
@@ -7,6 +7,7 @@
  * This software is released under the MIT SUSHI-WARE License.
  */
 
-.Profile-container {
-  margin: 10px 10px;
+.Background-canvas {
+  position: absolute;
+  top: 0; left: 0;
 }
