--- a/src/styles/Background.scss
+++ b/src/styles/Background.scss
@@ -8,8 +8,9 @@
  */
 
 .Background-canvas {
-  position: absolute;
+  position: fixed;
   top: 0; left: 0;
   z-index: -1;
   opacity: 0.5;
+  //background-color: #e47f45;
 }
