--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,9 @@
  * This software is released under the MIT SUSHI-WARE License.
  */
 
+// reseter.css
+@import url('https://cdn.jsdelivr.net/gh/krishdevdb/reseter.css/css/reseter.min.css');
+// font
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300&display=swap');
 
 html {
