--- a/src/styles/Posts.scss
+++ b/src/styles/Posts.scss
@@ -7,6 +7,8 @@
  * This software is released under the MIT SUSHI-WARE License.
  */
 
+@import 'toc-animation';
+
 h1 {
   margin-left: 5px;
   width: 85%;
@@ -17,18 +19,21 @@ h1 {
   display: flex;
 }
 
+.Posts-body {
+  margin-left: 15px;
+  width: 70%;
+  background-color: #1f221f;
+  padding: 15px;
+}
+
 // 目次部分
 .Posts-table_of_contents_container {
-  height: auto;
   padding: 5px 20px;
   background-color: #404e40;
   font-size: 22px;
   h2 { 
     margin: 0;
     text-align: center;
-  }
-  ul {
-    transition: all 0.2s;
   }
 }
 
@@ -37,15 +42,10 @@ $button-size: 30px;
   position: relative;
   top: 10px; right: 10px;
   width: $button-size; height: $button-size;
-  background-color: #ff0000;
+  background-color: #688f77;
   // アイコン
   span {
     font-size: $button-size;
     margin: auto;
   }
-}
-
-.Posts-body {
-  margin-left: 15px;
-  width: 70%;
 }
