--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,7 @@ html {
   font-family: 'M PLUS 1p', sans-serif;
   background-color: #2f332f;
   color: #eee;
+  margin: 25px 20px;
 
   a {
     color: #8888ff;
