--- a/src/styles/ArticleList.scss
+++ b/src/styles/ArticleList.scss
@@ -7,12 +7,13 @@
  * This software is released under the MIT SUSHI-WARE License.
  */
 
- .ArticleList-container {
+.ArticleList-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
+  width: 90%;
   padding: 10px;
-  background-color: #1f221f33;
+  background-color: #1f221f;
   h2 {
     font-size: 1.2em;
   }
@@ -24,12 +25,15 @@
   margin: 20px;
 
   color: inherit;
-  background-color: #414e42;
-  transition: background-color 0.5s;
+  background-color: #ffffff48;
+  transition: background-color 0.4s;
   &:hover{
+    h2 {
+      border-bottom: 1px solid;
+    }
     cursor: pointer;
-    background-color: #505f51;
-    transition: background-color 0.5s;
+    background-color: #ffffff65;
+    transition: background-color 0.4s;
   }
 
   h2 {
