--- a/src/styles/Article.scss
+++ b/src/styles/Article.scss
@@ -1,5 +1,5 @@
 /*!
- * Posts.scss
+ * Article.scss
  *
  * CopyRight (c) 2021 Watasuke
  * Email  : <watasuke102@gmail.com>
@@ -11,16 +11,16 @@
 
 $second-bg-color: #1f221f;
 
-.Posts-title {
+.Article-title {
   margin-left: 5px;
   border-bottom: solid 5px #16b900;
 }
 
-.Posts-container {
+.Article-container {
   display: flex;
 }
 
-.Posts-body {
+.Article-body {
   width: 70%;
   background-color: $second-bg-color;
   padding: 15px;
@@ -29,7 +29,7 @@ $second-bg-color: #1f221f;
   }
 }
 
-.Posts-table_of_contents {
+.Article-table_of_contents {
   #toc-1 { font-weight: bolder; }
   #toc-3 { margin-left: 20px; }
   #toc-4 { margin-left: 40px; }
@@ -38,7 +38,7 @@ $second-bg-color: #1f221f;
 }
 
 // 目次部分
-.Posts-table_of_contents_container {
+.Article-table_of_contents_container {
   padding: 5px 20px;
   background-color: #404e40;
   font-size: 22px;
@@ -49,7 +49,7 @@ $second-bg-color: #1f221f;
 }
 
 $button-size: 30px;
-.Posts-close_button {
+.Article-close_button {
   position: relative;
   top: 10px; right: 10px;
   width: $button-size; height: $button-size;
@@ -62,11 +62,11 @@ $button-size: 30px;
 }
 
 // サイドバー
-.Posts-side {
+.Article-side {
   width: 25%;
   margin-left: 20px;
 }
-.Posts-side_toc {
+.Article-side_toc {
   position: sticky;
   top: 20px;
   padding: 10px;
@@ -89,4 +89,14 @@ $button-size: 30px;
       background-color: #fff4;
     }
   }
+}
+
+// タグのCSSを上書き
+.TagContainer-container {
+  a {
+    font-size: 1em;
+    color: #363835;
+    background-color: #d1d8ce;
+  }
+  margin-bottom: 15px;
 }
