--- a/src/styles/ArticleList.scss
+++ b/src/styles/ArticleList.scss
@@ -14,14 +14,28 @@
   width: 90%;
   padding: 10px;
   background-color: #1f221f;
+  img {
+    width: 100%;
+    height: 150px;
+    margin: auto;
+    object-fit: cover;
+  }
   h2 {
     font-size: 1.2em;
+    height: 2.5em;
+  }
+  &::before, &::after {
+    order: 1;
+    content: "";
+    width: 250px;
+    padding: 20px;
+    margin: 20px;
   }
 }
 
 .ArticleList-card {
   width: 250px;
-  padding: 20px;
+  min-height: 450px;
   margin: 20px;
 
   color: inherit;
@@ -35,8 +49,8 @@
     background-color: #ffffff65;
     transition: background-color 0.4s;
   }
+}
 
-  h2 {
-    height: 2.5em;
-  }
+.ArticleList-text {
+  padding: 0 15px;
 }
