--- a/src/styles/top.scss
+++ b/src/styles/top.scss
@@ -30,3 +30,13 @@
   justify-content: space-around;
   margin-top: 10%;
 }
+
+@media screen and (max-width: 700px) {
+  .top-menu {
+    display: grid;
+    width: 100%;
+    // MenuCardのwidthが180px
+    grid-template-columns: 180px 180px;
+    justify-content: space-around;
+  }
+}
