--- a/src/styles/TagContainer.scss
+++ b/src/styles/TagContainer.scss
@@ -10,6 +10,12 @@
 .TagContainer-container {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
+
+  span {
+    font-size: 1.1em;
+    margin-right: 5px;
+  }
 
   a {
     font-size: 0.75rem;
