update: 記事一覧と記事ページのレスポンシブ対応

--- a/src/styles/Article.scss
+++ b/src/styles/Article.scss
@@ -133,3 +133,13 @@ $button-size: 30px;
     box-shadow: none !important;
   }
 }
+
+@media screen and (max-width: 700px) {
+  .Article-body {
+    width: 110%;
+    margin: auto;
+  }
+  .Article-side {
+    display: none;
+  }
+}
