--- a/src/styles/ArticleList.scss
+++ b/src/styles/ArticleList.scss
@@ -103,3 +103,9 @@
   width: 50px;
   height: 50px;
 }
+
+@media screen and (max-width: 700px) {
+  .ArticleList-list {
+    justify-content: center;
+  }
+}
