--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,12 +12,12 @@
 // font
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300&display=swap');
 
-html {
+body {
   font-family: 'M PLUS 1p', sans-serif;
   background-color: #2f332f;
   color: #eee;
-  margin: 25px 20px;
-  margin-top: 50px;
+  padding: 25px 20px;
+  padding-top: 50px;
 
   a {
     color: #8888ff;
