--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -7,15 +7,19 @@
  * This software is released under the MIT SUSHI-WARE License.
  */
 
-#portfolio-container {
-  background-color: #249b2ed0;
+#portfolio-container, 
+#portfolio-container_previous,
+#portfolio-container_after {
+  background-color: #249b2ea0;
   position: fixed;
   top: 0; left: 0;
   height: 100vh;
   width: 100vw;
   padding: 15px;
   li {
-    height: 200px;
+    height: 250px;
+    border: 2px solid;
+    margin: 20px;
   }
   h1 {
     position: fixed;
@@ -26,6 +30,14 @@
   &::-webkit-scrollbar {
     display: none;
   }
+}
+#portfolio-container_previous {
+  background-color: #910121a0;
+  transform: translateY(-100%);
+}
+#portfolio-container_after {
+  background-color: #4301e9a0;
+  transform: translateY(100%);
 }
 
 #portfolio-scroll {
