update: 要素がスクロール不可能だったときにもページ移動できるように

--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -24,6 +24,9 @@
   h1 {
     position: fixed;
   }
+  div {
+    min-height: 100%;
+  }
   // スクロールバー関連
   overflow-y: scroll;
   scrollbar-width: none;
