--- a/src/styles/MenuCard.scss
+++ b/src/styles/MenuCard.scss
@@ -6,11 +6,8 @@
  * Twitter: @Watasuke102
  * This software is released under the MIT SUSHI-WARE License.
  */
-
- @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
  
- 
- .MenuCard-container {
+.MenuCard-container {
   $translate-time: 0.2s;
   width: 180px;
   padding: 15px 25px;
@@ -26,11 +23,10 @@
     text-decoration: underline;
     transition: color $translate-time;
   }
-  span {
+  i {
     color: #eee;
     font-size: 80px;
-    // ちょっと右にずれてるので、下の文字と揃える
-    margin-left: -6px;
+    margin-bottom: 10px;
     transition: color $translate-time;
   }
   
@@ -42,7 +38,7 @@
       color: #222277;
       transition: color $translate-time;
     }
-    span {
+    i {
       color: #222;
       transition: color $translate-time;
     }
