--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,8 @@
 @import url('https://cdn.jsdelivr.net/gh/krishdevdb/reseter.css/css/reseter.min.css');
 // font
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300&display=swap');
+// icon
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css');
 
 body {
   font-family: 'M PLUS 1p', sans-serif;
