update: TagContainerのアイコンを変更

--- a/src/styles/TagContainer.scss
+++ b/src/styles/TagContainer.scss
@@ -12,9 +12,10 @@
   flex-wrap: wrap;
   align-items: center;
 
-  span {
+  i {
     font-size: 1.1em;
     margin-right: 5px;
+    margin-bottom: 5px;
   }
 
   a {
