--- a/src/styles/Article.scss
+++ b/src/styles/Article.scss
@@ -28,7 +28,12 @@ $second-bg-color: #1f221f;
 .Article-date_publish, .Article-date_update {
   display: flex;
   margin: 0 5px;
-  span {
+  align-items: center;
+  margin-bottom: 10px;
+  p {
+    margin: 0;
+  }
+  i {
     margin-left: 10px;
     margin-right: 4px;
   }
@@ -82,14 +87,16 @@ $second-bg-color: #1f221f;
   }
 }
 
-$button-size: 30px;
+$button-size: 40px;
 .Article-close_button {
   position: relative;
   top: 10px; right: 10px;
   width: $button-size; height: $button-size;
   background-color: #688f77;
   // アイコン
-  span {
+  i {
+    position: inherit;
+    left: 7px;
     font-size: $button-size;
     margin: auto;
   }
