--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -24,6 +24,23 @@
   i { margin-right: 10px; }
 }
 
+.next-page {
+  position: absolute;
+  left: 50%; bottom: 60px;
+  width: 60px; height: 60px;
+  margin-top: auto;
+  border-right: 2px solid #eee;
+  border-bottom: 2px solid #eee;
+  transform: rotate(45deg) translateX(-50%);
+  animation: 4s moving_arrow infinite ease-in-out;
+
+  @keyframes moving_arrow {
+      0% { bottom: 20px }
+     50% { bottom: 30px }
+    100% { bottom: 20px }
+  }
+}
+
 #portfolio-1 {
   background-color: #4b4692;
   h2 {
@@ -32,7 +49,11 @@
   }
 
   .avatar-and-name {
+    position: absolute;
+    left: 50%; top: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
+    align-items: center;
     justify-content: center;
     .separator { width: 20px; }
     .name-main {
