--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -32,12 +32,12 @@
   border-right: 2px solid #eee;
   border-bottom: 2px solid #eee;
   transform: rotate(45deg) translateX(-50%);
-  animation: 4s moving_arrow infinite ease-in-out;
+  animation: 5s moving_arrow infinite ease-in-out;
 
   @keyframes moving_arrow {
-      0% { bottom: 20px }
-     50% { bottom: 30px }
-    100% { bottom: 20px }
+      0% { bottom: 20px; }
+     50% { bottom: 30px; opacity: 0.5; }
+    100% { bottom: 20px; }
   }
 }
 
