--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -96,3 +96,38 @@
     }
   }
 }
+
+#portfolio-3 {
+  background-color: #4e773a;
+}
+
+#portfolio-4 {
+  background-color: #3c767a;
+  .card {
+    margin: 30px auto;
+    border-radius: 10px;
+    background-color:  #3d3d3d;
+
+    display: grid;
+    align-items: center;
+    width: 500px; height: 130px;
+    grid-template-rows: 50px 80px;
+    grid-template-columns: 100px 400px;
+
+    
+    i {
+      grid-row: 1 / 3;
+      font-size: 50px;
+      text-align: center;
+    }
+    a {
+      grid-column: 2;
+      color: #ffffff;
+    }
+    p {
+      grid-row: 2;
+      grid-column: 2;
+      align-items: baseline;
+    }
+  }
+}
