--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -99,6 +99,40 @@
 
 #portfolio-3 {
   background-color: #4e773a;
+  .page-desc {
+    text-align: center;
+  }
+  .container {
+    margin-bottom: 120px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .card {
+      display: flex;
+      justify-content: space-between;
+      padding: 30px;
+      margin: 30px 0;
+      width: 80%;
+      background-color: #3d3d3d;
+      &:nth-child(even) {
+        flex-direction: row-reverse;
+      }
+
+      
+      .desc {
+        width: 50%;
+        a {
+          font-size: 1.75em;
+          font-weight: bold;
+          color: #eee;
+          text-decoration: underline;
+        }
+        p {
+          margin-top: 20px;
+        }
+      }
+    }
+  }
 }
 
 #portfolio-4 {
