update: 一時的に追加していた要素を削除 liの高さとかコメントアウトとか

--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -18,9 +18,6 @@
       text-align: center;
     }
   }
-  li {
-    height: 200px;
-  }
 }
 
 .icon-and-text {
@@ -73,6 +70,10 @@
 #portfolio-1 {
   background-color: #92466c;
   text-align: center;
+  p {
+    margin: 0 30px;
+    font-size: 1.2em;
+  }
 }
 
 #portfolio-2 {
