--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -122,6 +122,7 @@
       
       .desc {
         width: 50%;
+        margin: 0 20px;
         a {
           font-size: 1.75em;
           font-weight: bold;
@@ -132,7 +133,18 @@
           margin-top: 20px;
         }
       }
+      @media screen and (max-width: 750px) {
+        flex-direction: column;
+        &:nth-child(even) {
+          flex-direction: column;
+        }
+        .desc {
+          width: 90%;
+          margin: auto;
+        }
+      }
     }
+    
   }
 }
 
@@ -152,7 +164,7 @@
     
     i {
       grid-row: 1 / 3;
-      font-size: 50px;
+      font-size: 70px;
       text-align: center;
     }
     a {
