fix: タグが中央揃えになっていたのを修正

--- a/src/styles/TagListCard.scss
+++ b/src/styles/TagListCard.scss
@@ -8,7 +8,9 @@
  */
 
 .TagListCard-container {
-  text-align: center;
+  h3 {
+    text-align: center;
+  }
   background-color: #1f221f;
   padding: 5px 10px;
   padding-bottom: 20px;
