--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -150,6 +150,11 @@
 
 #portfolio-4 {
   background-color: #3c767a;
+
+  .container {
+    margin-bottom: 120px;
+  }
+
   .card {
     margin: 30px auto;
     border-radius: 10px;
@@ -175,6 +180,24 @@
       grid-row: 2;
       grid-column: 2;
       align-items: baseline;
+    }
+  }
+}
+
+#portfolio-5 {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  h2 {
+    font-size: 2em !important;
+  }
+  .links {
+    font-size: 1.2em;
+    display: flex;
+    justify-content: center;
+    span {
+      margin: 0 5px;
     }
   }
 }
