update: 記事一覧でのサムネイルの高さ指定をimportantに 本番環境で適用されないため

--- a/src/styles/ArticleList.scss
+++ b/src/styles/ArticleList.scss
@@ -16,7 +16,7 @@
 .ArticleList-thumbnail {
   height: 150px;
   img {
-    height: 150px;
+    height: 150px !important;
     width: 100%;
     margin: auto;
     object-fit: cover;
@@ -29,7 +29,6 @@
   justify-content: space-between;
   h2 {
     font-size: 1.2em;
-    //height: 2.5em;
     padding-bottom: 16px;
   }
   &::before, &::after {
