--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -45,6 +45,7 @@
   }
 }
 
+// first page
 #portfolio-0 {
   background-color: #4b4692;
 
@@ -66,13 +67,19 @@
     }
 
     @media screen and (max-width: 700px) {
+      position: static;
+      transform: none;
       flex-direction: column;
-      margin: 0 60px;
-      padding-bottom: 50px;
+      padding-bottom: 120px;
+      img {
+        width: 80%;
+        margin: auto;
+      }
     }
   }
 }
 
+// about me
 #portfolio-1 {
   background-color: #92466c;
   text-align: center;
@@ -82,6 +89,7 @@
   }
 }
 
+// Skills
 #portfolio-2 {
   background-color: #926846;
   #skill-container {
@@ -92,18 +100,19 @@
 
     .categoly {
       .heading {
-        font-size: 2em;
+        // containerの横幅より小さくしたい
+        font-size: 1.85em;
         margin-left: 15px;
       }
     }
     @media screen and (max-width: 920px) {
       flex-direction: column;
       margin: 0 60px;
-      padding-bottom: 50px;
     }
   }
 }
 
+// Works
 #portfolio-3 {
   background-color: #4e773a;
   .page-desc {
@@ -125,7 +134,6 @@
         flex-direction: row-reverse;
       }
 
-      
       .desc {
         width: 50%;
         margin: 0 20px;
@@ -147,6 +155,7 @@
         .desc {
           width: 90%;
           margin: auto;
+          margin-top: 15px;
         }
       }
     }
@@ -154,6 +163,7 @@
   }
 }
 
+// Address
 #portfolio-4 {
   background-color: #3c767a;
 
@@ -172,7 +182,6 @@
     grid-template-rows: 50px 80px;
     grid-template-columns: 150px 350px;
 
-    
     i {
       grid-row: 1 / 3;
       font-size: 70px;
@@ -187,9 +196,25 @@
       grid-column: 2;
       align-items: baseline;
     }
+
+    
+    @media screen and (max-width: 550px) {
+      padding: 0 15px;
+      width: 70%; height: auto;
+      display: flex;
+      flex-direction: column;
+      a {
+        text-align: center;
+        margin-top: 20px;
+      }
+      i {
+        display: none;
+      }
+    }
   }
 }
 
+// final page
 #portfolio-5 {
   text-align: center;
   display: flex;
