--- a/src/styles/Article.scss
+++ b/src/styles/Article.scss
@@ -59,14 +59,14 @@ $second-bg-color: #1f221f;
   width: 70%;
   background-color: $second-bg-color;
   padding: 15px;
-  hr {
-    margin-bottom: 50px;
-  }
-  img {
+  .Thumbnail {
     width: 100%;
     max-height: 400px;
     margin: auto;
     object-fit: cover;
+  }
+  hr {
+    margin-bottom: 50px;
   }
   blockquote {
     border-left: solid 5px white;
