--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,7 +8,7 @@
  */
 
 // reseter.css
-@import url('https://cdn.jsdelivr.net/gh/krishdevdb/reseter.css/css/reseter.min.css');
+@import url('https://cdn.jsdelivr.net/gh/krishdevdb/reseter.css@1.20/css/reseter.min.css');
 // font
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300&display=swap');
 // icon
