--- a/src/styles/Article.scss
+++ b/src/styles/Article.scss
@@ -170,3 +170,14 @@ $button-size: 40px;
     display: none;
   }
 }
+.youtube-wrapper{
+  position: relative;
+  padding-bottom: 56.25%; // 9/16 
+  iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
