update: Twitter、YouTube以外の埋め込みに対応

--- a/src/styles/Article.scss
+++ b/src/styles/Article.scss
@@ -93,7 +93,7 @@ $second-bg-color: #1f221f;
   margin-top: 50px;
   padding: 5px 20px;
   background-color: #404e40;
-  font-size: 22px;
+  font-size: 1.3em;
   h2 { 
     margin: 0;
     text-align: center;
