--- a/src/styles/404.scss
+++ b/src/styles/404.scss
@@ -9,8 +9,10 @@
 
 .box-404 {
   position: fixed;
-  top: 0; left: 0;
-  width: 100vw; height: 100vh;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,4 +20,3 @@
     font-size: 10em;
   }
 }
-
