--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -13,7 +13,8 @@
   justify-content: space-around;
   position: fixed;
   align-items: center;
-  top: 0; left: 0;
+  top: 0;
+  left: 0;
   height: 50px;
   padding: 10px;
   width: 100vw;
