--- a/src/styles/PortfolioContainer.scss
+++ b/src/styles/PortfolioContainer.scss
@@ -7,11 +7,12 @@
  * This software is released under the MIT SUSHI-WARE License.
  */
 
-#PortfolioContainer-container, 
+#PortfolioContainer-container,
 #PortfolioContainer-container_previous,
 #PortfolioContainer-container_after {
   position: fixed;
-  top: 0; left: 0;
+  top: 0;
+  left: 0;
   height: 100vh;
   width: 100vw;
   padding: 15px;
@@ -31,18 +32,20 @@
 
 #PortfolioContainer-scroll {
   position: fixed;
-  top: 0; right: 0;
+  top: 0;
+  right: 0;
   width: 5px;
   background-color: #eee;
 }
 
 #PortfolioContainer-container_mobile {
   position: fixed;
-  top: 0; left: 0;
+  top: 0;
+  left: 0;
   height: 100vh;
   width: 100vw;
   overflow-x: hidden;
-  div[id^="portfolio"] {
+  div[id^='portfolio'] {
     position: relative !important;
     left: 0;
     h2 {
