--- a/src/styles/EmbedCard.scss
+++ b/src/styles/EmbedCard.scss
@@ -8,8 +8,11 @@
  */
 
 .EmbedCard-container {
-  width: 100%;
-  margin: 15px auto;
+  display: grid;
+  grid-template-columns: 50% 50%;
+
+  width: 90%;
+  margin: 30px auto;
   padding: 10px;
 
   border-radius: 15px;
@@ -19,11 +22,16 @@
     cursor: pointer;
     transform: translateY(-4px);
     transition: transform 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+    .title {
+      text-decoration: underline;
+    }
   }
 
   .EmbedCard-img_wrapper {
     margin: auto;
     width: 90%;
+    max-height: 260px;
+    overflow-y: hidden;
     img {
       width: 100%;
       height: 100%;
@@ -43,13 +51,11 @@
     }
   }
 
-  @media screen and (min-width: 800px) {
-    display: flex;
+  // 横幅が十分にあるときは画像とテキストを横並べ
+  @media screen and (max-width: 800px) {
+    display: block;
     .EmbedCard-img_wrapper {
-      width: 40%;
-    }
-    .EmbedCard-text {
-      margin-left: 10px;
+      margin-bottom: 15px;
     }
   }
 }
