fix: 埋め込みの文字がたまにはみ出ていた問題

--- a/src/styles/EmbedCard.scss
+++ b/src/styles/EmbedCard.scss
@@ -15,6 +15,7 @@
   margin: 30px auto;
   padding: 10px;
 
+  word-break: break-all;
   border-radius: 15px;
   background-color: #4e4e4e;
   transition: transform 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
