--- a/src/styles/toc-animation.scss
+++ b/src/styles/toc-animation.scss
@@ -14,7 +14,7 @@
   max-height: 300px;
   overflow-y: auto;
   li {
-    margin: 5px 0;
+    margin-bottom: 5px;
     &::marker {
       background-color: black;
       border: solid 1px white;
@@ -45,4 +45,3 @@
   opacity: 1;
   transition: all 0.2s ease-out;
 }
-/**/
