--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -37,13 +37,23 @@
 .next-page {
   position: absolute;
   left: 50%;
-  bottom: 60px;
-  width: 60px;
-  height: 60px;
+  bottom: 30px;
   margin-top: auto;
-  border-right: 2px solid #eee;
-  border-bottom: 2px solid #eee;
-  transform: rotate(45deg) translateX(-50%);
+  text-align: center;
+  transform: translateX(-50%);
+
+  span {
+    margin-top: 30px;
+  }
+  &::after {
+    content: '';
+    display: block;
+    width: 50px;
+    height: 50px;
+    border-right: 2px solid #eee;
+    border-bottom: 2px solid #eee;
+    transform: rotate(45deg);
+  }
   animation: 5s moving_arrow infinite ease-in-out;
 
   @keyframes moving_arrow {
