--- a/src/styles/404.scss
+++ b/src/styles/404.scss
@@ -1,7 +1,7 @@
 /*!
  * 404.scss
  *
- * CopyRight (c) 2021 Watasuke
+ * CopyRight (c) 2021-2022 Watasuke
  * Email  : <watasuke102@gmail.com>
  * Twitter: @Watasuke102
  * This software is released under the MIT SUSHI-WARE License.
