wip: 背景色変えようとした

--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -72,7 +72,7 @@
 
 // first page
 #portfolio-welcome {
-  background-color: #4b4692;
+  //background-color: #4b4692;
   
   .greeting {
     margin-bottom: 64px;
@@ -118,7 +118,7 @@
 
 // Skills
 #portfolio-2 {
-  background-color: #926846;
+  //background-color: #926846;
   #skill-container {
     display: flex;
     flex-wrap: wrap;
@@ -146,7 +146,7 @@
 
 // Works
 #portfolio-3 {
-  background-color: #4e773a;
+  //background-color: #4e773a;
   .page-desc {
     margin: 0 20px;
     text-align: center;
@@ -197,7 +197,7 @@
 
 // Address
 #portfolio-4 {
-  background-color: #3c767a;
+  //background-color: #3c767a;
 
   .container {
     padding-bottom: 120px;
