--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -78,6 +78,7 @@
     color: #eee;
   }
   .greeting {
+    margin-top: 16px;
     margin-bottom: 64px;
   }
   .avatar-and-name {
@@ -92,6 +93,7 @@
       font-weight: bold;
       font-size: 2.5em;
       margin-bottom: 2px;
+      margin-left: -3px;
     }
     .name-sub {
       color: #ccc;
