--- a/src/styles/PortfolioContainer.scss
+++ b/src/styles/PortfolioContainer.scss
@@ -47,3 +47,40 @@
     }
   }
 }
+
+#PortfolioContainer-page_indicator {
+  $font-size: 13px;
+
+  text-align: right;
+  position: fixed;
+  right: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  
+  color: #2f332f;
+  font-size: $font-size;
+
+  .indicator_container {
+    overflow: hidden;
+    width: $font-size;
+    padding: 0 calc(#{$font-size} - 4px);
+    margin: 16px 0;
+    margin-left: auto;
+    border-radius: $font-size;
+    background-color: #e9e9e988;
+    .name {
+      user-select: none;
+      padding: 0 $font-size;
+      font-weight: bold;
+    }
+    &:hover{
+      cursor: pointer;
+      width: auto;
+      transition: width 0.5s;
+    }
+    transition: width 0.5s;
+  }
+  .current{
+    background-color: #e9e9e9ee;
+  }
+}
