--- a/src/components/feature/ArticleLayout/TagContainer.scss
+++ b/src/components/feature/ArticleLayout/TagContainer.scss
@@ -7,30 +7,38 @@
  * This software is released under the MIT SUSHI-WARE License.
  */
 
+@use '../../common/color.scss';
+
 .TagContainer-container {
   display: flex;
-  flex-wrap: wrap;
+  // flex-wrap: wrap;
   align-items: center;
+  // width: 100%;
 
   i {
+    white-space: nowrap;
     font-size: 1.1em;
     margin-right: 5px;
     margin-bottom: 5px;
   }
 
   a {
+    display: inline-block;
+    white-space: nowrap;
     font-size: 0.8em;
     font-weight: bold;
     margin-right: 10px;
     margin-bottom: 5px;
     padding: 2px 10px 2px 5px;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
 
-    color: #111;
-    background-color: #e4e4e4;
+    $radius: 8px;
+    border-top-right-radius: $radius;
+    border-bottom-right-radius: $radius;
+
+    color: color.$fg;
+    border: 1px solid color.$fg;
     &:hover {
-      color: #4444bb;
+      color: color.$p0;
       transition: color 0.3s;
     }
   }
