--- a/src/components/feature/ArticleList/ArticleList.scss
+++ b/src/components/feature/ArticleList/ArticleList.scss
@@ -7,72 +7,73 @@
  * This software is released under the MIT SUSHI-WARE License.
  */
 
+@use '../../common/color.scss';
+
 .ArticleList-container {
   width: 95%;
   padding: 10px;
   //background-color: #1f221f;
 }
 
-.ArticleList-thumbnail {
-  height: 150px;
-  img {
-    height: 150px !important;
-    width: 100%;
-    margin: auto;
-    object-fit: cover;
-  }
-}
-
 .ArticleList-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   h2 {
     font-size: 1.2em;
     padding-bottom: 16px;
   }
-  &::before,
-  &::after {
-    order: 1;
-    content: '';
-    width: 250px;
-    padding: 20px;
-    margin: 20px;
-  }
 }
 
 .ArticleList-card {
-  width: 250px;
-  min-height: 450px;
-  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  margin: 8px;
+  padding: 8px 12px;
 
   color: inherit;
-  background-color: #1f241f;
-  transition: background-color 0.4s;
+  border: 1px solid color.$fg;
+  transition: background-color 0.3s;
   &:hover {
-    h2 {
-      border-bottom: 1px solid;
-    }
+    background-color: rgba(color.$fg, 0.15);
     cursor: pointer;
-    background-color: #414141;
-    transition: background-color 0.4s;
+    transition: background-color 0.3s;
+  }
+
+  .ArticleList-thumbnail {
+    height: 150px;
+    img {
+      height: 150px !important;
+      width: 100%;
+      margin: auto;
+      object-fit: cover;
+    }
+  }
+
+  .ArticleList-info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 8px;
+    .ArticleList-date > span {
+      position: relative;
+      padding: 4px;
+      margin-right: 12px;
+      white-space: nowrap;
+      color: color.$bg;
+      background-color: color.$fg;
+    }
   }
   .ArticleList-text {
-    margin-top: auto;
-    padding: 0 15px;
-  }
-  .ArticleList-date {
-    position: relative;
-    span {
-      position: absolute;
-      bottom: 0;
-      right: 0;
-      padding: 2px;
-      background-color: #1f221fbb;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+    .ArticleList-description {
+      position: relative;
+      word-wrap: break-word;
+      margin: 0;
     }
-  }
-  .ArticleList-description {
-    word-wrap: break-word;
   }
 }
 
