update: EmbedCard>OGP画像がない際にメッセージを出すようにした

--- a/src/components/feature/Article/EmbedCard.scss
+++ b/src/components/feature/Article/EmbedCard.scss
@@ -28,6 +28,10 @@
     }
   }
 
+  .EmbedCard-img_fallback {
+    display: inline-block;
+    margin: auto;
+  }
   .EmbedCard-img_wrapper {
     margin: auto;
     width: 90%;
